# mindscopex_analysis

./: .gitignore  CLAUDE.md  Makefile  pyproject.toml
configs/: config.yaml  notebook_defaults.yaml  notebook_neuron_compare.yaml  qwen7_deepseek_r1_distill_compare.yaml  qwen_reasoning_tasks.yaml
configs/experiment/: persona_layer_probe.yaml  qwen_neuron_compare.yaml
notebooks/: 01_qwen_neuron_comparison.ipynb  02_qwen_reasoning_eval.ipynb
scripts/: run_experiment.py
src/mindscopex_analysis/: __init__.py  capture.py  cli.py  io.py  neurons.py  notebook_presets.py  notebook_utils.py  patching.py  pipeline.py  sae_bridge.py  sae_pretrained.py
src/mindscopex_analysis/sae/: __init__.py  collect.py  model.py  trainer.py
src/mindscopex_analysis/visualize/: __init__.py  layers.py
